# FuckBF

./: .gitignore  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md  build.rs  fbf.py
.github/workflows/: develop_pr.yml  feature_pr.yml  release.yml
interpreter/: __init__.py
src/: ast.rs  cli.rs  evaluation.rs  evaluator.rs  fuckbf.rs  fuckbrainfuck.rs  main.rs  optimization.rs  update.rs  version.rs
src/ast/: instruction_types.rs  instructions.rs  parser.rs  patterns.rs
src/ast/patterns/: set_to_zero.rs
src/evaluation/: cell.rs  evaluator.rs  scope.rs
src/fuckbf/: ast.rs
src/fuckbf/ast/: instruction_types.rs  instructions.rs  parser.rs  patterns.rs
src/fuckbf/ast/patterns/: set_to_zero.rs
src/fuckbf/evaluation/: evaluator.rs  scope.rs
src/fuckbf/optimization/: optimized_instructions.rs  optimizer.rs
src/fuckbrainfuck/ast/: instructions.rs  parser.rs  patterns.rs
src/fuckbrainfuck/ast/patterns/: set_to_zero.rs
src/fuckbrainfuck/evaluation/: evaluator.rs  scope.rs
src/fuckbrainfuck/optimization/: optimized_instructions.rs  optimizer.rs
src/optimization/: optimized_instructions.rs  optimizer.rs
