[package]
name = "fuckbrainfuck"
version = "0.1.0"
edition = "2021"
authors = ["Sellig6792 <sellig6792@gmail.com>"]
description = "The improved Brainfuck"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fbf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.30", features = ["derive"] }
anyhow = "1.0.51"
rand = "0.8.5"
num = "0.4.0"